# adso

./: .coveragerc  .env  .flake8  .gitignore  .gitmodules  .python-version  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  TODO  clean.sh  clean_docs.sh  environment.yml  environment_dev.yml  noxfile.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflow/: test.yml
.github/workflows/: build-master.yml  coverage.yml  publish.yml  release.yml  test-and-lint.yml  test.yml
adso/: __init__.py
adso/tests/: __init__.py  test_function.py
docs/: .buildinfo  Makefile  conf.py  documentation.html  genindex.html  index.html  index.rst  installation.rst  license.html  make.bat  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: documentation.doctree  environment.pickle  index.doctree  license.doctree
docs/.doctrees/_examples/: LDA_20newsgroups.doctree  LDA_testdata.doctree  NMF_20newsgroups.doctree  index.doctree  sg_execution_times.doctree
docs/.doctrees/adso/: adso.doctree  data.doctree  topicmodel.doctree  transform.doctree
docs/_downloads/0e0462761f3adc5dcaeaf93a0a48e291/: NMF_20newsgroups.ipynb
docs/_examples/: LDA_20newsgroups.html  LDA_test.html  LDA_testdata.html  NMF_20newsgroups.html  index.html  sg_execution_times.html
docs/_source/: conf.py  documentation.rst  index.rst
docs/_source/_examples/: LDA_20newsgroups.ipynb  LDA_20newsgroups.py.md5  LDA_20newsgroups.rst  LDA_20newsgroups_codeobj.pickle  LDA_testdata.ipynb  LDA_testdata.py.md5  LDA_testdata.rst  LDA_testdata_codeobj.pickle  NMF_20newsgroups.py.md5  NMF_20newsgroups.rst  NMF_20newsgroups_codeobj.pickle  index.rst  sg_execution_times.rst
docs/_source/adso/: adso.rst  data.rst  topicmodel.rst  transform.rst
docs/adso/: adso.html  data.html  topicmodel.html  transform.html
examples/: 20news.py  LDA_testdata.py  NMF_20newsgroups.py  README.rst
examples/v0.0.1/: LDA_20newsgroups.py
legacy/tests/data/: test_20newsgroups.py  test_loadtxt.py
legacy/tests/topicmodel/: test_NMF.py
legacy/transform/: common.py  filter.py
recipe/: meta.yaml
src/adso/: __init__.py  common.py
src/adso/algorithm/: NMF.py  __init__.py  common.py  vectorizer.py
src/adso/algorithms/: DTM.py  HDP.py  LDA.py  NMF.py  PLSA.py  TM.py  UH.py  UMAP_HDBSCAN.py  __init__.py  _sbmtm.py  cluster.py  common.py  hSBM.py  vectorizer.py
src/adso/corpora/: 20newsgroups.py  __init__.py  gutenberg.py  salesforce.py  sklearn.py  wos.py
src/adso/data/: __init__.py  common.py  corpus.py  dataset.py  newsgroups.py  stopwords.py  (+3 more)
tests/: __init__.py  test_00_directories.py  test_01_dataset.py  test_02_vectorizer.py  test_03_NMF.py  test_04_PLSA.py  test_05_LDAVB.py  test_06_LDAGS.py  test_07_HDPVB.py  test_08_HDPGS.py  test_09_TM.py  test_10_hSBM.py  test_11_wos.py  test_12_UMAP_HDBSCAN.py  test_LDA.py  test_data_20newsgroups.py  test_data_loadtxt.py  test_dataset.py  test_example.py  test_loadtxt.py  test_tokenizer.py
tests/algorithms/: test_HDPVB.py  test_NMF.py
tests/dataset/: test_dataset.py  test_vectorizer.py  test_wos.py
tests/general/: test_directories.py
tests/transform/: test_tokenizer.py
(+18 files in other folders)
