[tool.poetry]
name = "adso"
version = "0.0.2"
description = "A topic-modelling library"
authors = ["Michele 'TnTo' Ciruzzi <tnto@hotmail.it>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/TnTo/adso"
documentation = "https://tnto.github.io/adso/" 

[tool.poetry.dependencies]
python = "~3.7 || ~3.8"
dask = "^2.30.0"
matplotlib = "^3.3.3"
nltk = "^3.5"
numba = "^0.51"
pathlib = "^1.0.1"
requests = "^2.25.0"
scipy = "^1.5.4"
sparse = "^0.11.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
coverage = {version = "^5.3", extras = ["toml"]}
darglint = "^1.5.5"
flake8 = "^3.8.4"
flake8-annotations = "^2.4.1"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
ipykernel = "^5.3.4"
mypy = "^0.790"
pytest = "^6.1"
pytest-cov = "^2.10.1"
readme-renderer = "^28.0"
sphinx = "^3.2.1"
sphinx-autodoc-typehints = "^1.11.0"
sphinx-gallery = "^0.8.1"
xdoctest = "^0.15.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["example"]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = ["raise ValueError"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
