[tool.poetry]
name = "adso"
version = "0.1.0"
description = "A topic-modelling library"
authors = ["Michele 'TnTo' Ciruzzi <tnto@hotmail.it>"]
license = "GPL-3.0+"
readme = "README.rst"
repository = "https://github.com/TnTo/adso"
documentation = "https://tnto.github.io/adso/" 

[tool.poetry.dependencies]
python = "^3.6"
dask = "^2.30.0"
matplotlib = "^3.3.3"
nltk = "^3.5"
numba = "^0.51"
pathlib = "^1.0.1"
requests = "^2.25.0"
scipy = "^1.5.4"
sparse = "^0.11.2"

[tool.poetry.dev-dependencies]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["example"]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = ["raise ValueError"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
