[tool.poetry]
name = "adso"
version = "0.1.0"
description = "A topic-modelling library"
authors = ["Michele 'TnTo' Ciruzzi <tnto@hotmail.it>"]
license = "GPL-3.0+"
readme = "README.rst"
repository = "https://github.com/TnTo/adso"
documentation = "https://tnto.github.io/adso/" 

[tool.poetry.dependencies]
python = "^3.6"
pathlib = "^1.0.0"
numpy = "^1.19"
dask = "2021.03.0"
dask-ml = "^1.8.0"
h5py = "^3.1.0"
more-itertools = "^8.7.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["example"]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = ["raise ValueError"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
